# CI_Test

./: .gitignore
.circleci/: config.yml
app/: CMakeLists.txt
app/src/: CMakeLists.txt  main.cpp
app/src/math/: ComplexNumber.cpp  ComplexNumber.hpp
app/test/: CMakeLists.txt
app/test/math/: ComplexNumberTests.cpp
